# xlane-lkm

./: .gitignore  .gitmodules  CMakeLists.txt  DPDK.md  Jenkinsfile  Kbuild  Kbuild.in  Kconfig  Kconfig_kernelbuild  Makefile  Plain.md  README.md  TODO  acli-installer.sh  asgard_lkm_loader.py  build.sh  build_host_tasks.py  candidate.c  checkpatch.pl  config.h  consensus.c  consensus.h  dbg_wrapper.sh  development-guide.md  dpdk_connector.c  echo.c  example.asgard-bench.ini  follower.c  gen_package.sh  ini.c  ini.h  init-laptop-alias.sh  init.sh  install.md  install_modules.sh  kvstore.c  kvstore.h  leader.c  leader.h  libasraft.c  (+35 more)
ansible/: libasraft.local.inventory.ini  libasraft.testlab.inventory.ini
ansible/playbooks/: install-dpdk.yml  provision-tnodes.yml  rebuild-linux.yml  start-tnodes.yml
app/: meson.build
app/libasraft/: Makefile  candidate.h  consensus.c  consensus.h  dpdk_connector.h  follower.h  leader.c  libasraft.h  membership.h  meson.build  pacemaker.h  payload.h  pkthandler.c  pktqueue.h  proto.c  proto.h  replication.c  ringbuffer.c
app/libasraft/test/: node.ini
app/simple/: Makefile  main.c
apps/fd_demo_app/: Makefile  demo.py  main.c
asgard-cli/: README.md  asg-cli.py  setup.cfg  setup.py
asgard-cli/asgardcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
asgard-cli/cli/: __init__.py  cli.py  test.py
asgard-cli/cli/configuration/: configure.py
asgard-cli/cli/evaluation/: __init__.py  asgard.py  evalAsgardRedis.py  evalRedis.py
asgard-cli/cli/evaluation/pyasgard/: pyasgard.py
asgard-cli/cli/generation/: generate.py
asgard-cli/cli/verification/: verify.py
asgardcli/: asg-cli.py  example.asgard-bench.ini  requirements.txt  setup.py
asgardcli/asgardcli/: OptionMutex.py  acli.py  configure.py  exec_bench.py  pyasgard.py  test.py  utils.py
cli/: cli.py  utils.py
cli/configuration/: __init__.py  configure.py
cli/evaluation/: asgard.py  etcd.py  evalAsgardRedis.py  evalRedis.py  orchestrate.py  redis.py
cli/generation/: generate.py
cmake/modules/: Finddpdk.cmake
common/: logger.h  sassy_dev.h
common/asgard/: asgard.h  asgard_async.h  asgard_echo.h  asgard_uface.h  consensus.h  logger.h  multicast.h  payload_helper.h  ringbuffer.h
common/asguard/: asgard_uface.h  asguard.h  asguard_async.h  asguard_echo.h  consensus.h  logger.h  multicast.h  payload_helper.h  ringbuffer.h
common/sassy/: consensus.h  logger.h  mlx5_con.h  payload_helper.h  sassy.h  sassy_dev.h  sassy_hb.h  sassy_net.h  sassy_pm.h  sassy_ts.h
connection_layer/: asguard_con.c
connection_layer/core/: Makefile  sassy_connection_core.c  sassy_core.c  sassy_core.c.new  sassy_core.h  sassy_net.c
connection_layer/mlx5/: Makefile  mlx5_con.c
connection_layer/pacemaker/: Makefile  sassy_pacemaker.c  sassy_pacemaker_test.c  sassy_pacemaker_ti.c
control_layer/: Makefile  sassy_control.c  sassy_pm_ctrl.c  sassy_pm_ctrl.c.new
core/: .asguard.ko.cmd  .asguard.mod.cmd  .asguard.mod.o.cmd  .asguard.o.cmd  .asguard_core.o.cmd  .asguard_core_ctrl.o.cmd  .asguard_payload_helper.o.cmd  .gitignore  Makefile  asgard_core.c  asgard_core.h  asgard_core_ctrl.c  asgard_payload_helper.c  asguard.ko  asguard.mod  asguard_core.c  asguard_core.h  asguard_core.mod.c  asguard_core_ctrl.c  asguard_payload_helper.c  consensus.c  consensus.h  echo.h  ini.c  ini.h  leader.c  libasraft.c  libasraft.h  logger.c  logger.h  membership.c  membership.h  module.c  module.h  modules.order  multicast.c  pacemaker.c  pacemaker.h  pkthandler.h  pktqueue.h  (+11 more)
core/Synbuf/: .gitignore  CMakeLists.txt  README.md
core/Synbuf/kernel-space/: synbuf-chardev.c
core/Synbuf/kernel-space/include/: synbuf-chardev.h
core/Synbuf/user-space/: .gitignore
core/Synbuf/user-space/include/: synbuf-connector.h
core/event_logger/: .event_logger.o.cmd  .event_logger_ctrl.o.cmd  event_logger.c  event_logger_ctrl.c
core/logic_layer/: Makefile
core/multicast/: multicast_ctrl.c
core/net/: .asguard_net.o.cmd  asgard_async_queue.c  sassy_net.c  (+4 more)
docker/: Dockerfile  README.md  docker-compose.yml
docs/: .buildinfo  .gitignore  README.md  README.rst  about_the_docs.rst  asgard-cli.cli.configuration.html  asgard-cli.cli.evaluation.html  asgard-cli.cli.evaluation.interpret.html  asgard-cli.cli.evaluation.pyasgard.html  asgard-cli.cli.generation.html  asgard-cli.cli.html  asgard-cli.cli.verification.html  asgard-cli.html  asgard-lkm.html  conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-manual.html
kernel-space/: synbuf-chardev.c
lkm/: asgard-net.c  asgard-net.h  consensus-config-ctrl.c  consensus-config-ctrl.h  consensus-eval-ctrl.h  consensus-request-gen.h  core-ctrl.c  core-ctrl.h  kernel-net.c  kernel_ts.c  kernel_ts.h  multicast-ctrl.c  multicast-ctrl.h  pm-ctrl.c  pm-ctrl.h  proto-instance-ctrl.c  proto-instance-ctrl.h
logic_layer/: Makefile
playbooks/: README.md
src/: CMakeLists.txt
src/cmake/modules/: FindDPDK.cmake
src/core/: .module.o.d  candidate.c  consensus.c  consensus.h  eval_helper.c  follower.c  follower.h  kvstore.c  kvstore.h  leader.c  libasraft.c  libasraft.h  logger.c  logger.h  membership.c  membership.h  module.c  module.h  multicast.c  multicast.h  pacemaker.c  pacemaker.h  payload.c  payload.h  pingpong.c  pingpong.h  pkthandler.c  pkthandler.h  pktqueue.c  pktqueue.h  proto.c  proto.h  replication.c  replication.h  ringbuffer.c  ringbuffer.h  timekeeping.c  timekeeping.h  types.c  types.h
src/lkm/: asgard-net.c  asgard-net.h  consensus-config-ctrl.c  consensus-config-ctrl.h  consensus-eval-ctrl.c  consensus-request-gen.c  consensus-request-gen.h  core-ctrl.c  core-ctrl.h  kernel_ts.c  kernel_ts.h  multicast-ctrl.c  multicast-ctrl.h  pm-ctrl.c  proto-instance-ctrl.c  proto-instance-ctrl.h  synbuf-chardev.c  synbuf-chardev.h  ts-ctrl.c  ts-ctrl.h
src/userspace/: runner.c  tnode.c  tnode.h
tests/: .gitignore  CMakeLists.txt
tests/core/: hello_world.c  kunit_basic_test.c  kunit_net.c
tests/raft/: kunit_follower.c  test_follower.c
userspace/: ini.c  ini.h  runner.c  tnode.c  tnode.h
(+208 files in other folders)
