[metadata]
# replace with your username:
name = asgard-cli
version = 0.0.1
author = Vincent Riesop
author_email = Vincent.Riesop@gmail.com
description = Asgard Kernel Module controller
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Distributed-Systems-Programming-Group/asgard-lkm
project_urls =
    Bug Tracker = https://github.com/Distributed-Systems-Programming-Group/asgard-lkm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    asgard-cli = cli.cli:entry_point